Fix header's spacing.

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -19,12 +19,13 @@ body {
 
 header {
     max-width: 1200px;
+    margin: auto;
 }
 
 .header {
     display: flex;   
     width: 100%;
-    /* min-height: 150px; */
+    min-height: 150px;
     max-height: 200px;
     position: relative;
     align-items: center;
@@ -67,7 +68,7 @@ nav > a:hover {
 .social-links {
     display: flex;
     justify-content: space-between;
-    margin-left: 10px;
+    margin-left: 50px;
     margin-right: 20px;
     flex-direction: row;
 }
